# SurfaceMineDesignWB

./: .gitignore  Init.py  InitGui.py  MANIFEST.in  README.md  SurfaceMineDesignerWbIcon.py  manifest.ini  open_slope_designer.FCMacro  package.xml  requirements.txt  setup.py
commands/: bm_peek.py  create_bench.py  create_crest.py  create_optimization.py  create_optimization_parameters.py  create_pit.py  create_toe.py  export_omf.py  import_bm_from_csv.py  import_omf.py
descriptions/: creating_omf_bm_example.ipynb  csv_to_omf copy.ipynb  csv_to_omf.ipynb  omf_handling.ipynb  omfproj.omf  pit_design_no_ramps.md  pit_design_no_ramps.pptx  pit_design_no_ramps_upd.pptx  sort_by_IJK.ipynb
design_assets/: bm_from_csv.omf  campala_design_surf.omf  campala_phase_design.omf  marvin_bm_from_csv.omf  menkar_project.omf  tereza.stl  tereza_final.stl  tereza_opt.omf  tereza_phase_3.stl  test_bm.omf
features/: bench.py  block_model.py  crest.py  optimization.py  pit.py  toe.py
resources/: bm.xpm
resources/XPMs/: bench1.xpm  bench2.xpm  bench3.xpm  pit.xpm
ui/: bench_dialog.py  blockModelImport.ui  crest_dialog.py  import_omf_dialog.py  omf_dialogs.py  optimization_dialog.py  optimization_tab.py  peak_bm_dialog.py  pit_dialog.py  test.ui  toe_dialog.py
utils/: blockmodel.py  bm_handler.py  design.py  geometry.py  omf_handling.ipynb  temp.py  utils.py
