<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1">
  <name>Surface Mine Design</name>
  <description>Parametric surface mine design tools and more</description>
  <version>0.0.1</version>
  <maintainer email="denismikulich91@gmail.com">Mikulich Denis</maintainer>
  <license>LGPL2+</license>
  <url type="repository" branch="main">https://github.com/denismikulich91/SurfaceMineDesignWB</url>
  <url type="documentation">https://github.com/denismikulich91/SurfaceMineDesignWB/blob/main/README.md</url>

  <content>
    <workbench>
      <name>Surface Mine Design</name>
      <classname>SurfaceMineDesign</classname>
      <description>Parametric surface mine design tools and more</description>
      <version>0.0.1</version>
      <subdirectory>./</subdirectory>
      <icon>resources/workbench.svg</icon>
      <freecadmin>1.0.0</freecadmin>
      <depend>shapely</depend>
      <tag>mining</tag>
    </workbench>
  </content>
</package>
